# stock-logistics-workflow

./: README.md  test-requirements.txt
delivery_total_weight_from_packaging/: README.rst  __manifest__.py
delivery_total_weight_from_packaging/tests/: test_weight_from_packaging.py
sale_order_global_stock_route/: README.rst  __manifest__.py
setup/_metapackage/: VERSION.txt  pyproject.toml  setup.py
stock_account_product_run_fifo_hook/: README.rst  __manifest__.py  hooks.py
stock_account_product_run_fifo_hook/i18n/: es.po  it.po  stock_account_product_run_fifo_hook.pot
stock_account_product_run_fifo_hook/model/: product.py  stock_valuation_layer.py
stock_customer_deposit/: README.rst  __manifest__.py
stock_customer_deposit/i18n/: es.po  it.po  stock_customer_deposit.pot
stock_customer_deposit/models/: sale_order.py  sale_order_line.py  stock_move.py  stock_quant.py
stock_customer_deposit/readme/: DESCRIPTION.md  USAGE.md
stock_customer_deposit/tests/: test_sale_customer_deposit.py
stock_customer_deposit/views/: sale_order_views.xml
stock_customer_deposit_sale_margin/: README.rst  __manifest__.py
stock_dangerous_goods/: README.rst  __manifest__.py
stock_dangerous_goods/i18n/: it.po
stock_move_line_lock_qty_done/: README.rst  __manifest__.py
stock_move_manage_priority/: README.rst  __manifest__.py
stock_no_negative/: README.rst
stock_picking_operation_quick_change/: README.rst
stock_picking_sale_order_link/: README.rst
stock_restrict_lot/: README.rst  __manifest__.py
stock_valuation_layer_usage/: README.rst  __manifest__.py
(+46 files in other folders)
